Refactor event system: optimize event dispatching with priority grouping and batch processing, streamline null checks, and enhance thread management